# robo_games_2025

./: README.md
Final codes/: motor.py  motor_control.py  tune_hsv.py
Final codes/TO upload/: final_code.py
Final codes/kinect/: coordinate_test.py  rgbd.py
Final codes/realsense/: 3d_mapper.py  map_viewer.py  point_cloud_v1.py  realsense.py  surface_recon.py
ObjectDetection/: CMakeLists.txt
Round 1/: README.md
Round 1 World/protos/: MyProto.proto
Round 1 World/worlds/: .maze24.wbproj  maze24.wbt
Round 1/worlds/: .maze24.wbproj
Round 2/: README.md
Round 2 Vision Test World/controllers/: my_gps.cpp
Round 2 Vision Test World/worlds/: maze24.wbt
Round 3/: README.md
Round 3/Final codes/: KobukiDriver.py  kobuki.py  kuboki ball detetion.py  motor.py  motor_control.py  tune_hsv.py
Round 3/worlds/: .final_round.wbproj
Second round/: Robot.urdf
Second round/worlds/: .round_2.wbproj  round_2.wbt
Task Documents/: README.md
World file/worlds/: RoboMaze.wbt
World_with_robot/worlds/: .RoboMaze.wbproj  RoboMaze.wbt
controllers/Final_round_controller/: Final_round_controller.py  depth_vision.py  motor_controller.py
controllers/motor_control/: motor.py  motor_control.py
controllers/my_controller/: my_controller.cpp
controllers/my_gps/: my_gps.cpp
controllers/range_finder/: range_finder.py
cpp_vision/: CMakeLists.txt  main.cpp
cpp_vision/include/: image_processing.h
cpp_vision/src/: image_processing.cpp
my_project/worlds/: .RObogames_epuck_test.wbproj  (+1 more)
vslam/: 2D_occupancy_grid.py
worlds/: .final_round.wbproj  final_round.wbt
(+27 files in other folders)
